Small fix for the stat value overlapping the stat label

--- a/css/less/style.less
+++ b/css/less/style.less
@@ -78,14 +78,14 @@ h1 {
             margin: 0;
             dt {
                 float: left;
-                width: 50%;
+                width: ~"calc(50% - 4px)";
                 padding: 0 2px 0 2px;
                 margin: 0;
                 font-weight: bold;
             }
             dd {
                 float: left;
-                width: 50%;
+                width: ~"calc(50% - 4px)";
                 padding: 0 2px 0 2px;
                 margin: 0;
                 a {
